@@ -1,5 +1,14 @@
 2008-07-14  Mirco Bauer <meebey@meebey.net> 
 
+	* Frontend.cs: Fixed indention.
+	
+	  Call Quit() in ShowException, as thats what the message (CrashDialog)
+	  says.
+	
+	  Don't run first start druid anymore.
+
+2008-07-14  Mirco Bauer <meebey@meebey.net> 
+
 	* Entry.cs: Fixed loosing the selection issue when bringing focus back to
 	  the input entry.
 
