@@ -1,3 +1,10 @@
+2008-07-14  Mirco Bauer <meebey@meebey.net> 
+
+	* Config/Config.cs: Added OFTC, GIMPNet, EFnet, IRCnet and freenode as
+	  default IRC servers.
+	
+	  New users will join #smuxi on the first start automatically.
+
 2008-06-30  Mirco Bauer <meebey@meebey.net> 
 
 	* Session.cs: Expose session chat as property.
